# DMRF

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/neural-graphics-primitives/: common.h  common_device.cuh  nerf_loader.h  render_buffer.h  testbed.h
preprocess/: README.md
preprocess/lighting_estimation/: generate_weight_map.py  optimize.py  visualize_emission_only.py
preprocess/preprocess_multiexposure_hdr/: multi_exposure_hdr_preprocess.ipynb
scripts/: edl_utils.py  exp_game.py  exp_garden_ball.py  exp_garden_mirror.py  exp_garden_rotate.py  exp_lamp_basket.py  exp_lamp_spheres.py  render_classroom_EDL.py  render_classroom_default.py  render_courtyard_EDL.py  render_courtyard_default.py  render_garden_EDL.py  render_kitchen_EDL.py  render_kitchen_default.py  render_street_EDL.py  render_street_default.py
scripts/exp/: classroom.json  courtyard.json  garden_ball.json  garden_mirror_shadow.json  garden_rotate.json  kitchen.json  street.json  (+2 more)
simpleRt/: CMakeLists.txt
simpleRt/assets/: family_siggraph.json  monkey.json  obj_0  obj_1  obj_2  test.json
simpleRt/src/: FileReader.cu  FileReader.cuh  aabb.cu  aabb.cuh  bvh.cu  bvh.cuh  camera.cuh  cuda_error_handle.cu  cuda_error_handle.cuh  hittable.cu  hittable.cuh  hittable_list.cu  hittable_list.cuh  material.cu  material.cuh  obj_parser.cuh  random.cu  random.cuh  ray.cuh  render.cuh  simpleRtAPI.cu  simpleRtAPI.cuh  sphere.cu  sphere.cuh  triangle.cu  triangle.cuh  vec3.cu  vec3.cuh  world.cuh
src/: main.cu  nerf_loader.cu  python_api.cu  render_buffer.cu  testbed.cu  testbed_nerf.cu
(+11 files in other folders)
